--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mobx-react": "^4.4.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^3.1.6"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.3.0",
